--- a/angular.json
+++ b/angular.json
@@ -65,6 +65,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "allowedHosts": ["localhost", "palancar.izt.uam.mx"]
+          },
           "configurations": {
             "production": {
               "buildTarget": "app-reportes:build:production"
